Fix v-alignment of "brand" title in the navbar

--- a/app/assets/stylesheets/_bootstrap-styles.scss
+++ b/app/assets/stylesheets/_bootstrap-styles.scss
@@ -16,6 +16,11 @@ th.attribute_group, th.calculation_group {
   -webkit-border-radius: 0
 }
 
+.navbar a.brand {
+  padding-top: 11px;
+  font-size: 16px;
+}
+
 .navbar .navbar-search {
   margin-top: 3px;
 
